app is functional. But it looks horrendous

--- a/pre-week/React/React-photo-album/main.css
+++ b/pre-week/React/React-photo-album/main.css
@@ -1,13 +1,22 @@
 body {
   margin: 0; }
 
-header h1 {
+header {
+  width: 100%;
   display: flex;
   justify-content: center;
   background: gray;
-  width: 100%;
   margin: 0;
   padding: 20px 0px; }
+  header h1 {
+    margin: 0;
+    cursor: pointer; }
+    header h1:hover {
+      text-decoration: underline; }
+
+h2 {
+  display: flex;
+  justify-content: center; }
 
 .selected {
   display: block; }
@@ -36,7 +45,21 @@ header h1 {
 
 .album-pics {
   display: flex;
-  height: 60vw; }
+  height: 89vh;
+  align-content: center; }
+  .album-pics nav {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center; }
+    .album-pics nav div {
+      cursor: pointer;
+      margin: 5px 10px;
+      padding: 5px 10px;
+      border: 1px solid black;
+      background: white;
+      border-radius: 3px; }
+      .album-pics nav div:hover {
+        background: lightgray; }
 
 .al-pics {
   display: flex;
@@ -67,8 +90,16 @@ nav {
         text-decoration: none;
         color: blue; }
 
+.albums {
+  width: 100%; }
+  .albums img {
+    border: 2px solid black;
+    margin: 10px; }
+
 div .big-pic {
-  width: 500px;
+  width: auto;
+  max-width: 80vw;
+  max-height: 80vh;
   border: 2px solid black; }
 
 /*# sourceMappingURL=main.css.map */
