--- a/pre-week/React/React-photo-album/styles/main.scss
+++ b/pre-week/React/React-photo-album/styles/main.scss
@@ -1,19 +1,23 @@
 body {
   margin: 0;
+  background: #5A6892;
+  font-family: 'Bree Serif', serif;
 }
 
 header {
   width: 100%;
   display: flex;
-  justify-content: center;
-  background: gray;
+  justify-content:flex-start;
+  background: #2C3F5D;
   margin: 0;
-  padding: 20px 0px;
+  padding-left: 20px;
   h1 {
     margin: 0;
     cursor: pointer;
+    color: white;
+    font-size: 3.5em;
     &:hover {
-      text-decoration: underline;
+      color: #F8F2DA;
     }
   }
 }
@@ -21,14 +25,17 @@ header {
 h2 {
   display: flex;
   justify-content: center;
+  width: 90vw;
+  color: white;
 }
 
 .selected {
   display: block;
 }
 
-.page-album, .albums {
+.page-album, .pictures {
   cursor: pointer;
+  border-radius: 5px;
 }
 
 .albums-img-ul {
@@ -37,27 +44,51 @@ h2 {
   align-items: flex-end;
   justify-content: space-around;
   margin: 100px 10%;
+  border-radius: 5px;
+
   li {
     justify-content: center;
-    border: 2px solid black;
-    a {
-      text-decoration: none;
+    // border: 2px solid black;
+    background: white;
+    border-radius: 5px;
+    &:hover {
+      p {
+        background: #F8F2DA;
+      }
+    }
+    p {
+      padding: 5px 0 40px 20px;
+      margin: 0;
+      background: white;
+      border-bottom-left-radius: 5px;
+      border-bottom-right-radius: 5px;
+      box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.75);
     }
   }
-  img {
+  .img-container {
+    height: 200px;
     border-bottom: 2px solid black;
-    display: block;
+    display: flex;
+    align-items: center;
   }
 }
 
 .albums-img, .albums img {
   width: 200px;
   height: auto;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.75);
+
+}
+
+.pictures:hover {
+  box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
 }
 
 .album-pics {
   display: flex;
-  height: 89vh;
+  height: 100vh;
   align-content: center;
   nav {
     display: flex;
@@ -66,12 +97,14 @@ h2 {
     div {
       cursor: pointer;
       margin: 5px 10px;
-      padding: 5px 10px;
-      border: 1px solid black;
+      width: 80px;
+      padding: 5px 0;
       background: white;
       border-radius: 3px;
+      text-align: center;
       &:hover {
-        background: lightgray
+        background: #F8F2DA;
+        box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
       }
     }
   }
@@ -88,8 +121,7 @@ nav {
   align-items: center;
   height: 100%;
   width: 100px;
-  background: gray;
-  border: 1px solid black;
+  background: #2C3F5D;
   overflow: hidden;
   ul {
     list-style-type: none;
@@ -113,8 +145,11 @@ nav {
 
 .albums {
   width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   img {
-    border: 2px solid black;
+    // border: 2px solid black;
     margin: 10px;
   }
 }
@@ -123,5 +158,6 @@ div .big-pic {
   width: auto;
   max-width: 80vw;
   max-height: 80vh;
-  border: 2px solid black;
+  cursor: default;
+  box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
 }
