--- a/week-04/EtsyAJAX/styles/main.scss
+++ b/week-04/EtsyAJAX/styles/main.scss
@@ -12,6 +12,17 @@ body {
   border: 1px solid lightgray;
   border-radius: 5px;
   margin: 0 10px;
+  ul {
+    list-style-type: none;
+    margin: 15px;
+    padding: 0;
+    font-weight: bold;
+    border-bottom: 1px solid lightgray;
+    li {
+      padding: 5px 15px;
+      font-weight: 200;
+    }
+  }
 }
 
 .form-obj {
@@ -21,17 +32,22 @@ body {
   .key-string {
     width: 400px;
     height: 40px;
+    font-size: 1.5em;
   }
   .submit-btn {
     width: auto;
     height: 20px;
     margin: 0;
-    padding: 12px;
+    padding: 8px 10px 37px 10px;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     background: #34A8C4;
     color: white;
     font-weight: 600;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    font-size: 1.4em;
   }
 }
 
