--- a/week-04/ToDo/styles/_variables.scss
+++ b/week-04/ToDo/styles/_variables.scss
@@ -1,2 +1,5 @@
 $button-color: #34A8C4;
-$button-color-hover: darken($button-color, 10%)
+$button-color-hover: darken($button-color, 10%);
+
+$delete-button-color: #EF3B32;
+$delete-button-color-hover: darken($delete-button-color, 10%);
