--- a/week-04/EtsyAJAX/main.css
+++ b/week-04/EtsyAJAX/main.css
@@ -56,7 +56,7 @@ body {
     border: 1px solid lightgray;
     margin: 10px;
     border-radius: 5px;
-    max-height: 290px;
+    max-height: 295px;
     background: white; }
     .search-images li a {
       display: flex;
@@ -69,7 +69,9 @@ body {
         border-top-right-radius: 5px;
         border-top-left-radius: 5px; }
       .search-images li a h4 {
-        margin-bottom: 0;
-        overflow: hidden; }
+        margin-left: 5px;
+        margin-bottom: 0px;
+        overflow: hidden;
+        line-height: 20px; }
 
 /*# sourceMappingURL=main.css.map */
